--- a/Junior Math Manual 2022.tex
+++ b/Junior Math Manual 2022.tex
@@ -2762,7 +2762,35 @@ The minus sign means that the point $B$ is to the right of $X$ in this
 case.  See Figure~\ref{tangex1}.
 \begin{figure}[htp]
 \begin{center}
-\includegraphics[width=\textwidth]{fig/Figure17}
+%\includegraphics[width=\textwidth]{fig/Figure17}
+\scalebox{0.9}{
+\begin{tikzpicture}
+    \begin{axis}[axis line style={black!55},
+%    title={$v=x^3-6x^2+9x$},
+      xlabel=$x$,
+      ylabel=$v$,
+      axis lines=middle,
+      ymin=-1,
+      ymax=4,
+      xmin=-2.5,
+      xmax=2.5,
+      xtick distance=1, ytick distance=1,
+      width=5in, height=5in, samples=100, ]
+      \addplot[] {x^2 + 2};
+      \node [] at (2,3.5)  {$v=x^2 + 2$};
+      \addplot[] coordinates {(-1,3) (-1,0)}
+      [every node/.style={xshift=-18pt,yshift=-8pt}, sloped,]
+       node [pos=0.6] {\rotatebox{0}{\small (ordinate)}};
+       \node at (-1.25,3) {\textsf{V}};
+       \node at (-0.8,0.13) {\textsf{X}};
+       \node at (0.65,0.15) {\textsf{B}};
+       \addplot[] coordinates {(-1,3) (0.5,0)}
+       [every node/.style={xshift=-7pt,yshift=-8pt},sloped]
+       node [pos=.5] {\small (tangent)};
+       \addplot[line width=0.8pt] coordinates {(-1,3) (0.5,0)};
+    \end{axis}
+  \end{tikzpicture}
+  }
 \caption{}
 \label{tangex1}
 \vspace{-10pt}
