Created more space after eq. in prob. 2.

--- a/Junior Math Manual 2022.tex
+++ b/Junior Math Manual 2022.tex
@@ -1022,14 +1022,13 @@ $$\frac{1}{1} + \frac{1}{3} + \frac{1}{6} \mbox{ etc.}= 2\left[\left(\frac{1}{1}
 
 In a manuscript written a few years later, Leibniz writes:
  \begin{quote}
- Whenever it is said that a certain infinite series of numbers has a sum, I am of the opinion that all that is being said is that any finite series with the same rule has a sum, and that the error always diminishes as the series increases, so that it becomes as small as we would like.\footnote{ ``Infinite Numbers," from April of 1676.  The translation is from Richard T.\ W.\ Arthur's {\em The Labyrinth of the Continuum}, Yale: New Haven and London, 2001, page 99.  The Latin text is in Arthur's book, as well as Series VI, Volume 3, pages 496--504 of the Berlin Academy edition.}
-
- \end{quote}
+ Whenever it is said that a certain infinite series of numbers has a sum, I am of the opinion that all that is being said is that any finite series with the same rule has a sum, and that the error always diminishes as the series increases, so that it becomes as small as we would like.\footnote{``Infinite Numbers," from April of 1676.  The translation is from Richard T.\ W.\ Arthur's {\em The Labyrinth of the Continuum}, Yale: New Haven and London, 2001, page 99.  The Latin text is in Arthur's book, as well as Series VI, Volume 3, pages 496--504 of the Berlin Academy edition.}
+\end{quote}
 
 \subsubsection*{Problem 2}
-
 Show that each term in the column with exponent 4  is equal to $\frac{3}{2}$ times the difference of two successive terms in the column with exponent 3.  Use this, and the principle of sums of differences, to show that (as Leibniz claims)
 $$\frac{1}{1} + \frac{1}{4} + \frac{1}{10} + \mbox{ etc.} = \frac{3}{2}.$$
+\vspace{-2pt}
 
 \subsubsection*{Example 1}
 We can use the fact that each column in Table 1 is the series of successive differences of the following column to find the sums.  For example, the triangular numbers are the differences of the pyramidals:
