Re-formatted figure and theorem in value of e proof.

--- a/Junior Math Manual 2022.tex
+++ b/Junior Math Manual 2022.tex
@@ -3658,11 +3658,17 @@ equation~1 becomes
  determine an exact value for $e$, but the property of the tangents of
  the logarithmic line can help us limit the range of values that $e$
  might have, as shown in the following theorem.
+\newpage
 \begin{theorem}
 $2<e<4.$
 \end{theorem}
 \noindent {\bf Demonstration:}
-See Figure~\ref{natlog2}.
+See Figure~\ref{natlog2}. There $CL$ is again a natural logarithmic line whose ordinates $GL$ we
+denote by $w$ and whose abscissas $AG$ we denote by $x$. The line
+$TCM$ is tangent to $CL$ at $C$, and the line $CN$ is drawn parallel
+to the axis $AG$.  Now if $AG=1$, then
+$$GL = e^1 = e,$$
+and thus $e$ appears in the diagram as the ordinate $GL$.
 \begin{figure}[htp]
 \begin{center}
 \includegraphics[width=.65\textwidth]{fig/Figure28A}
@@ -3670,13 +3676,7 @@ See Figure~\ref{natlog2}.
 \label{natlog2}
 \vspace{-10pt}
 \end{center}
-\end{figure} 
-There $CL$ is again a natural logarithmic line whose ordinates $GL$ we
-denote by $w$ and whose abscissas $AG$ we denote by $x$. The line
-$TCM$ is tangent to $CL$ at $C$, and the line $CN$ is drawn parallel
-to the axis $AG$.  Now if $AG=1$, then
-$$GL = e^1 = e,$$
-and thus $e$ appears in the diagram as the ordinate $GL$.  
+\end{figure}   
 
 % Since $x=0$ at the point $A$, it follows that 
 % $$AC = e^0 = 1.$$
