Replaced \'and\' with semicolon to reformat lines on pages 123 and 124.

--- a/Junior Math Manual 2022.tex
+++ b/Junior Math Manual 2022.tex
@@ -4785,7 +4785,7 @@ In Note~19, below (p.~\pageref{crg19}), we demonstrate that sums and differences
 \subsection*{Note 16}
 \label{crg16}
 
-To see where Leibniz gets his equation for $a$, let $AB$ be a circle with center $C$ (Figure~\ref{circarc}),
+To see where Leibniz gets his equation for $a$, let $AB$ be a circle with center $C$ (Figure~\ref{circarc});
 \begin{figure}[htp]
 \begin{center}
 \includegraphics[width=.65\textwidth]{fig/Figure42}
@@ -4794,7 +4794,7 @@ To see where Leibniz gets his equation for $a$, let $AB$ be a circle with center
 \vspace{-10pt}
 \end{center}
 \end{figure} 
-and drop a perpendicular $BD$ (the {\em sine} of angle $BCA$ or arc
+drop a perpendicular $BD$ (the {\em sine} of angle $BCA$ or arc
 $a$) from some point $B$ on the circle to the radius $CA$.  Let the
 radius $CA=1$, let $AD = x$ (so that $CD = 1-x$) and let arc $AB = a$.
 (The line $AD$ in the unit circle is the {\em versed sine}, and the
