Added page reference to line 4951 to flag figure 16, two pages beyond (p.129).

--- a/Junior Math Manual 2022.tex
+++ b/Junior Math Manual 2022.tex
@@ -4948,7 +4948,7 @@ Figure $CHKD$ is proportional to surface $AMNB$.
 
 \noindent{\bf Demonstration:}
 
-In Figure~\ref{rotate}, consider the ring $ERPP_1R_1E_1$ formed by
+In Figure~\ref{rotate} (p.\pageref{rotate}), consider the ring $ERPP_1R_1E_1$ formed by
 rotating the infinitely small line $EE_1$ about the axis.  The area of
 the surface $AMNB$ is the sum of all these infinitely small rings.
 The circumference of this ring is proportional to its radius $EF$:
