Deleted repetition of Figure 15 (pp. 128-30)

--- a/Junior Math Manual 2022.tex
+++ b/Junior Math Manual 2022.tex
@@ -4963,19 +4963,21 @@ The surface area of the ring $ERPP_1R_1E_1$ is equal to its width
 \end{equation}
 
 
-Now, to find $EE_1 \times EF$, turn back to Figure~\ref{acurve2}. Draw
+Now, to find $EE_1 \times EF$, turn back to Figure~\ref{acurve}. 
+%Figure~\ref{acurve2}. 
+Draw
 the characteristic triangle $EE_1Q$, the ordinate $E_1F_1$ and the
 line $F_1L_1$ equal to the the perpendicular to the curve at $E_1$.
-Then \addtocounter{figure}{-2}
-\begin{figure}[ht]
-\begin{center}
-\includegraphics[width=\textwidth]{fig/Figure44}
-\caption{}
-\label{acurve2}
-\vspace{-10pt}
-\end{center}
-\end{figure}
-\addtocounter{figure}{1}
+Then %\addtocounter{figure}{-2}
+%\begin{figure}[ht]
+%\begin{center}
+%\includegraphics[width=\textwidth]{fig/Figure44}
+%\caption{}
+%\label{acurve2}
+%\vspace{-10pt}
+%\end{center}
+%\end{figure}
+%\addtocounter{figure}{1}
 $$\angle E_1EQ + \angle QEG  = \angle FEG + \angle QEG = \mbox{a right angle.}$$
 Therefore
 $$\angle E_1EQ = \angle FEG,$$
@@ -5002,7 +5004,7 @@ the sums of each side of equation~3 for all points on the curve.  The
 sum of the left side of equation~3 is the sum of all the rings
 $ERPP_1R_1E_1$ in Figure~\ref{rotate}, that is, the surface $AMNB$.
 The sum of the right side is $2\pi$ times the sum of all the
-quadrilaterals $FLL_1F_1$ in Figure~\ref{acurve2}, that is, $2\pi$
+quadrilaterals $FLL_1F_1$ in Figure~\ref{acurve}, that is, $2\pi$
 times the whole figure $CHKD$.  Therefore
 $$\mbox{surface }AMNB = 2\pi\times \mbox{figure }CHKD,$$
 and surface $AMNB$ is proportional to figure $CHKD$.
