Formatted all "qed's" consistently; narrowed spaces of items on lists

--- a/Junior Math Manual 2022.tex
+++ b/Junior Math Manual 2022.tex
@@ -5,6 +5,7 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 
+
 \usepackage{pgfplots}% for figures 24 and 27
 \pgfplotsset{compat=1.16}
 
@@ -684,7 +685,7 @@ For let $a=b$ and $b=c$; I say $a=c$.  For things are {\em equal} which have
 the same quantity or which can be substituted for each other while preserving
 the quantity; therefore let us substitute either $c$ in place of $b$ in the
 equation $a=b$ or $a$ in place of $b$ in the equation $b=c$, and either way we
-will have $a=c$.  Q.\ E.\ D.
+will have $a=c$.  \textsc{q.e.d.}
 \item[Second:] {\em that equals added to or subtracted from equals make
 equals.}  $a=b$ and $c=d$. I say that $a+c= b+d$.  For $a+c = b+c$ (because
 $a=b$) and $b+c = b+d$ (because $c=d$). Therefore $a+c = b+d$.
@@ -775,7 +776,8 @@ But I shall say nothing about Mind except what can be both clearly perceived and
 
 
 In this first paragraph of ``An Approach to the Arithmetic of Infinites," Leibniz briefly alludes to four examples.  It is not necessary to understand these examples to go on, but it may be helpful to say a few words about them here.
- \begin{enumerate}
+\begin{enumerate}
+\itemsep0em
 \item Any line can be cut into infinitely many separate lines.
 \item We can ``calculate the sum of infinitely many decreasing quantities."  Leibniz will give a few examples of this later in the paper.
 \item We can ``prescribe limits to quantities increasing or decreasing in a finite space."  Here Leibniz may be thinking of constructions like those in Proposition 2 of Book XII of Euclid's {\em Elements}.  There Euclid shows how to construct an infinite series of polygons inscribed in a circle, such that each polygon contains the the previous polygon in the series.  These inscribed polygons are ``quantities increasing \ldots in a finite space," and the limit which is prescribed for them is the circle.  Similarly, Euclid shows in the same proposition how to construct an infinite series of polygons circumscribed around a circle, such that each polygon is contained by the previous polygon in the series.  These circumscribed polygons are ``quantities decreasing in a finite space," and the limit which is prescribed for them is again the circle.
@@ -1044,6 +1046,7 @@ $$ 3 + 6 + 10 + 15 = 35 - 1 = 34.$$
 \subsubsection*{Problem 3}
 Find the following sums using the principle of sums of differences:
 \begin{enumerate}
+\itemsep0em
 \item[a.] $4 + 10 + 20 + 35 + 56$
 \item[b.] $15 + 35 + 70 + 126 + 210.$
 \end{enumerate}
@@ -1061,6 +1064,7 @@ $$\frac{1}{1} + \frac{1}{3} + \frac{1}{6} = 2\left(\frac{1}{1} - \frac{1}{4}\rig
 \subsubsection*{Problem 4}
 Find the following sums using the principle of sums of differences:
 \begin{enumerate}
+\itemsep0em
 \item[a.] $ \frac{1}{3} + \frac{1}{6} + \frac{1}{10} + \frac{1}{15} + \frac{1}{21} + \frac{1}{28}$
 \item[b.] $ \frac{1}{4} + \frac{1}{10} + \frac{1}{20} + \frac{1}{35} + \frac{1}{56}.$
 \end{enumerate}
@@ -1847,6 +1851,7 @@ This last expression is the one given by Leibniz's rule for roots.
 
 This long note contains seven parts:
 \begin{enumerate}
+\itemsep0em
 \item{Examples of finding differences,}
 \item{Problems about finding differences,}
 \item{Demonstrations of Leibniz's rules,}
@@ -2214,6 +2219,7 @@ dv & = & w\,dy + y\,dw \\
 For each of the following expressions for $v$, find $dv$ in terms of $x$ and $dx$.\label{pset1}
 
 \begin{enumerate}
+\itemsep0em
 \item $$v = x^2 -3x.$$
 \item $$v = x^2 + 2x - 5.$$
 \item $$ v = x^3 + 4x - 6.$$
@@ -2692,6 +2698,7 @@ curve turns its concavity upward, where it turns its concavity
 downward, and where it is inflected (if anywhere).  Sketch a graph of
 each curve.
 \begin{enumerate}
+\itemsep0em
 \item $v = x^2 -4x +1.$
 \item  $v = x^2  + 2x - 5.$
 \item $v = x^3 -3x^2 -9x +4.$
@@ -2854,6 +2861,7 @@ find a general expression for the line $XB$ cut off on the axis by the
 ordinate and the tangent, and use this general expression to find one
 particular tangent.
 \begin{enumerate}
+\itemsep0em
 \item $v = x^2 -4x +1.$
 \item  $v = x^2  + 2x - 5.$
 \item $v = x^3 -3x^2 -9x +4.$
@@ -3376,9 +3384,12 @@ in the rule when it is expressed in numbers.
 The solution to De Beaune's problem is a logarithmic line, and Leibniz
 seems to assume that readers are familiar with logarithmic lines.
 Since most of us are not familiar with logarithmic lines, in this note
-we give a brief introduction to them.  The note is divided into six
+we give a brief introduction to them.
+
+The note is divided into six
 parts:
 \begin{enumerate}
+\itemsep0em
 \item a definition of logarithmic lines;
 \item differential equations for logarithmic lines;
 \item natural logarithms;
@@ -3590,7 +3601,7 @@ differential equation
 $$w = \frac{a}{b}dw,$$
 where $a$ is a constant equal to $XC$, the distance on the axis
 between the ordinate and the tangent, and $b$ is a constant $dx$ equal
-to the difference of the abscissas $AX$.  {\bf Q.\ E.\ D.}
+to the difference of the abscissas $AX$.  \textsc{q.e.d.}
 \vspace{.5\baselineskip}
 
 
@@ -3658,7 +3669,6 @@ equation~1 becomes
  determine an exact value for $e$, but the property of the tangents of
  the logarithmic line can help us limit the range of values that $e$
  might have, as shown in the following theorem.
-\newpage
 \begin{theorem}
 $2<e<4.$
 \end{theorem}
@@ -3720,7 +3730,7 @@ $$\frac{1}{2}  < \frac{1}{\sqrt{e}},$$
 and therefore
 $$\sqrt{e} < 2$$
 and 
-$$e <4.$$ {\bf Q.\ E.\ D.}
+$$e <4.$$ \textsc{q.e.d.}
 
 The methods used in Theorem~3 can be generalized to find more exact approximations for $e$.
 
@@ -5009,7 +5019,7 @@ times the whole figure $CHKD$.  Therefore
 $$\mbox{surface }AMNB = 2\pi\times \mbox{figure }CHKD,$$
 and surface $AMNB$ is proportional to figure $CHKD$.
 
-\noindent Q. E. D.
+\noindent  \textsc{q.e.d.}
 
 \subsection*{Note 19}
 \label{crg19}
@@ -5196,7 +5206,7 @@ $AC_3 =v_3$, etc.  Therefore $AC_1 =dv_1$, $C_1C_2 = dv_2$, etc. Then
   \int\!dv & = & dv_1 + dv_2 + \ldots\\
            & = & AC_1 + C_1C_2 + C_2C_3 +\ldots \\
            & = & AB\\
-           & = & v. \mbox{\hspace{10ex} Q. E. D.}
+           & = & v. \mbox{\hspace{10ex}  \textsc{q.e.d.}}
 \end{eqnarray*}
 
 Note that it is important here that we begin the sum at the point where $v=0$.
@@ -5233,7 +5243,7 @@ therefore equal to $EF$ times $FF_1$, that is, to $y\,dx$.  Therefore
 $$dv = y\,dx,$$
 that is,
 $$d\int\!y\,dx = y\,dx.$$
-Q. E. D.
+\textsc{q.e.d.}
 
 The second fundamental theorem says that any infinitely small variable
 quantity $y\,dx$, is equal to the difference of its sums.
@@ -8693,7 +8703,7 @@ We can use this expression for $v$ to find an expression for $a$.
 Therefore acceleration is constant, and 
 $$F = ma = 2km$$
 is also constant.  We have thus gone from a phenomenon of nature to a
-force by taking derivatives. Q.~E.~F.\vspace{2ex}
+force by taking derivatives. \textsc{q.e.f.}\vspace{2ex}
 
 \subsubsection*{From force to phenomenon}
 Conversely, suppose we are not given a phenomenon, but are given a
@@ -8740,7 +8750,7 @@ Therefore
 \end{eqnarray*}
 We are finally back to the phenomenon we started with: distance is
 proportional to the square of time.  We have thus moved from a force
-to a phenomenon by taking integrals. Q.~E.~D.\vspace{2ex}
+to a phenomenon by taking integrals. \textsc{q.e.d.} \vspace{2ex}
 
 The above example of the falling body is relatively simple, and indeed
 Galileo treats it carefully without using calculus or Newtonian
@@ -9480,7 +9490,7 @@ etc.  Therefore
                     & = & \frac{1}{2}r(\mbox{arc }AB)\\
                     & = & \frac{1}{2}ra.
 \end{eqnarray*}
-\setlength{\jot}{\oldjot} Q. E. D.
+\setlength{\jot}{\oldjot} \textsc{q.e.d.}
 \end{quote}
 
 It follows from the theorem that once we have found a measurement $a$
@@ -9597,7 +9607,7 @@ $$\frac{1}{1+ u} = 1 - u + u^2 - u^3 + u^4 \mbox{ etc.}$$
 \end{eqnarray*}
 Therefore
  $$\frac{1}{1+u} = 1 -u +u^2 - u^3 \mbox{ etc.}$$
- Q.E.D.
+ \textsc{q.e.d.}
 
  (We assumed that $u<1$ so that $1 - u + u^2 -u^3 \mbox{ etc.}$ would
  be a finite sum.  If $u$ is equal to or greater than 1, then the sum
@@ -12343,7 +12353,7 @@ into any number of equal parts.  Therefore the line $AMC$, which has a
 single definite degree, would be capable of solving infinitely many
 problems of all possible degrees.  This is absurd. Therefore our {\em
   reductio} assumption that $AFC$ is not transcendent must be
-false. {\bf Q.\ E.\ D.}
+false. \textsc{q.e.d.}
 \label{endapp}
 
 %\newpage
