Item spacing; other spacing, especially in online integral signs.

--- a/Junior Math Manual 2022.tex
+++ b/Junior Math Manual 2022.tex
@@ -3412,7 +3412,7 @@ is the series of numbers
 $$2,\ 4,\  8,\ 16, \ldots;$$
 any two consecutive numbers in this series are always in a two to one ratio.
 
-A {\em logarithmic line} \label{logdef} may be defined as any line
+A {\em logarithmic line}\label{logdef} may be defined as any line
 such that any arithmetic progression of its abscissas corresponds to a
 geometric progression of its ordinates.  See Figure~\ref{logs}.
 \begin{figure}[htp]
@@ -3896,6 +3896,7 @@ dz & = & 3v^2dv\\
 equations~4 (page~\pageref{dex}) and 5 (page~\pageref{dlog}), find the
 following differences.
 \begin{enumerate}
+\itemsep0em
 \item $$d(e^{(3x +1)}).$$
 \item $$d(e^{(4x)} - 2e^{(2 - 3x)}).$$
 \item $$d(\log(x^3 -2x)).$$
@@ -5034,8 +5035,12 @@ demonstrating the fundamental theorem we will give a number of
 examples of how the calculus can be used to determine ``quadratrices
 or other lines, algebraic or transcendent" (p.~\pageref{quadothalg}).
 
+\smallskip
+
 This note is divided into five parts:
+\vspace{-0.5em}
 \begin{enumerate}
+\itemsep0em
 \item Finding areas of figures with sums.
 \item The reciprocity of sums and differences: the fundamental
   theorem.
@@ -5171,6 +5176,7 @@ denotes the sum beginning at $x=a$ and ending at $x=b$ (see Figure~\ref{sumab}).
 
 To show that sums and differences are reciprocal, we need to demonstrate two theorems:
 \begin{enumerate}
+\itemsep0em
 \item that if we find a difference and then find its sum, we get back
   to where we started; and
 \item that if we find a sum and then find its difference, we get back
@@ -6243,7 +6249,7 @@ that is the task.\footnote{Lines 174--180 of Allen Mandelbaum's translation.  Li
 Here are some examples.
 
 \begin{enumerate}
-\item Let $y = x^2$, so that $v = \int \!y\,dx = \int\! x^2\,dx.$ Suppose that the sum begins at the point $A$ where $x=0$.  We need to find an expression for $v$ such that
+\item Let $y = x^2$, so that $v = \int y\,dx = \int x^2\,dx.$ Suppose that the sum begins at the point $A$ where $x=0$.  We need to find an expression for $v$ such that
 \begin{enumerate}
 \item $dv = x^2\,dx$, and
 \item $v=0$ when $x=0$, where the sum begins.
@@ -6275,7 +6281,7 @@ and use the first fundamental theorem to conclude that
 Therefore the equation of the quadratrix $AFG$ is in this case\label{int1}
 $$v= \frac{x^3}{3}.$$
 
-\item Let $y = x^3$, so that $\int\!y\,dx = \int\!x^3\,dx$.   Suppose that the sum begins at the point $A$ where $x=0$. Then according to the first fundamental theorem, if we can find a quantity $v$ such that $x^3\,dx = dv$ and $v=0$ when $x=0$, then
+\item Let $y = x^3$, so that $\int y\,dx = \int x^3\,dx$.   Suppose that the sum begins at the point $A$ where $x=0$. Then according to the first fundamental theorem, if we can find a quantity $v$ such that $x^3\,dx = dv$ and $v=0$ when $x=0$, then
 $$\mbox{area }ADE= \int\!y\,dx = \int\!dv =  v.$$
 
 But we know from the rules of the calculus that 
@@ -6356,7 +6362,7 @@ and if we begin the sums when $v=0$ and $w=0$ then we will also begin the sums w
 \end{eqnarray*}
 \setlength{\jot}{\oldjot}
 \hspace{-.4em}We might call this the {\em addition rule for sums}.  We could likewise show that for any constant $a$ and any variable $t$
-$$\int\!at = a\int\!t.$$
+$$\int\!at = a\!\int\!t.$$
 This could be called {\em constant multiple rule for sums}.
 
 We can use these rules, and the rule from the third example, to find sums for many algebraic expressions, as in the following example.
@@ -6615,7 +6621,7 @@ dz & = & \cos v\,dv\\
 $$z = \cos^2 (4a).$$
 To find $dz$ in terms of $a$.  Here we let $v= \cos (4a)$, so that $z = v^2$ and 
 $$dz = 2v\,dv.$$
-To find $dv$ , we let $u = 4a$, so that $v = \cos u$ and
+To find $dv$, we let $u = 4a$, so that $v = \cos u$ and
 $$dv =  -\sin u \,du = -\sin(4a)\,du$$
 by the second example, above.  Finally, according to the constant multiple rule,
 $$du = d(4a) = 4\,da.$$
@@ -6628,7 +6634,7 @@ dz & = & 2v\,dv\\
 \end{eqnarray*}
 
 
-\item \label{sumsin}To find $\int\!\sin a \,da$, that is, area $FLM$ in Figure~\ref{sinecurve2},
+\item \label{sumsin}To find $\int \sin a \,da$, that is, area $FLM$ in Figure~\ref{sinecurve2},
 \begin{figure}[htp]
 \begin{center}
 \includegraphics[width=\textwidth]{fig/Figure48}
@@ -6871,7 +6877,7 @@ Likewise, the problem of finding three mean proportionals is a problem of the fo
 
 \begin{enumerate}
 
-\item Let $y = e^x.$  To find $\int\! y\,dx$, that is, area $FAED$ in Figure~\ref{logline} (page~\pageref{logline}), in terms of $x$.  To do this, we need to find a quantity $v$ such that $dv = e^x\,dx$ and $v=0$ when $x=0$.  According to equation~4 on page~\pageref{dex}, above, 
+\item Let $y = e^x.$  To find $\int y\,dx$, that is, area $FAED$ in Figure~\ref{logline} (page~\pageref{logline}), in terms of $x$.  To do this, we need to find a quantity $v$ such that $dv = e^x\,dx$ and $v=0$ when $x=0$.  According to equation~4 on page~\pageref{dex}, above, 
 $$d(e^x) = e^x\,dx.$$
 Therefore we might be tempted to set $v$ to be equal to $e^x$.  But $e^x$ is not equal to 0 when $x=0$: $e^0 =1.$  Therefore instead we set
 $$v = e^x - 1.$$
@@ -6887,7 +6893,7 @@ Therefore, according to the first fundamental theorem,
 & = & e^x - 1.
 \end{eqnarray*}
 
-\item Let $y=e^{2x}.$  To find $\int\! y\,dx$ in terms of $x$.  To do this, let 
+\item Let $y=e^{2x}.$  To find $\int y\,dx$ in terms of $x$.  To do this, let 
 $$u = 2x.$$
 Then
 $$y = e^u$$ 
@@ -6906,7 +6912,7 @@ The method we have used in this example is called {\em integration by substituti
 $$\int\! y\,dx$$
 can more easily be found when it is expressed in terms of $u$.  There are no universal rules for determining what new variable $u$ to substitute, and it can even be difficult to see in advance that substitution is a useful method for a given problem.
 
-\item Let $y = x \sin(x^2)$.  To find $\int\! y\,dx$ in terms of $x$.  To do this, let 
+\item Let $y = x \sin(x^2)$.  To find $\int y\,dx$ in terms of $x$.  To do this, let 
 $$u = x^2.$$
 Then 
 $$du = 2x\,dx$$
@@ -6927,7 +6933,7 @@ Therefore
 
 
 
-\item Let $y = xe^x$.  To find $\int \! y\,dx$ in terms of $x$.  
+\item Let $y = xe^x$.  To find $\int y\,dx$ in terms of $x$.  
 
 Let $u = x$ and $v= e^x$.  Then $dv = e^x\,dx$, and therefore
 $$y\,dx = u\,dv.$$
@@ -6945,7 +6951,7 @@ Therefore
 & = & xe^x - (e^x - 1) \mbox{\hspace{3em} (first example)}
 \end{eqnarray*}
 
-The method we have used in this example is called {\em integration by parts}: for any sum $\int\! y\,dx$, if we can find $u$ and $v$ such that $y\, dx = u\, dv$, then 
+The method we have used in this example is called {\em integration by parts}: for any sum $\int y\,dx$, if we can find $u$ and $v$ such that $y\, dx = u\, dv$, then 
 $$\int \! y\, dx = uv - \int \! v\,du.$$
 This method is useful when it is easier to find $\int\! v\,du$ than it is to find $\int\! u\,dv$.
 
@@ -8465,6 +8471,7 @@ For each of the following functions $f(x)$, find $f'(x)$.  Use
 functional notation as much as possible, and avoid infinitely small
 quantities
 \begin{enumerate}
+\itemsep0em
   \setcounter{enumi}{1}
 \item $f(x) = (x^2 + 3)^{17}.$
 \item $f(x) = \cos(x)e^{3x}.$
@@ -8559,6 +8566,7 @@ For each of the following functions $f(x,y)$, find
 $\displaystyle \frac{\partial f}{\partial x}$ and
 $\displaystyle \frac{\partial f}{\partial y}$.
 \begin{enumerate}
+\itemsep0em
   \setcounter{enumi}{5}
 \item $f(x,y) = 3x^2 + 2y^2.$
 \item $f(x,y) = 2y^2 + 3xy - 5x^2 + 2y.$
@@ -9148,7 +9156,7 @@ bisecting the remainder ($EB$) at $F$, you will have
 $EF = \frac{1}{16}$; and by continuing endlessly in this way you will
 never go beyond the boundary $B$.  I showed elsewhere that the same
 thing happens with the fractions of figurate numbers or the harmonic
-triangle.\footnote{In the paper``An Approach to the Arithmetic of
+triangle.\footnote{In the paper ``An Approach to the Arithmetic of
   Infinites," written in late 1672.  See Leibniz's {\em S\"{a}mtliche
     Schriften und Briefe} (Collected Writings and Letters), in
   Series~III, Volume~1, on pages 1--20.}
@@ -9787,7 +9795,7 @@ $$\mbox{area }CBEH = \int\! y\,dx.$$
 Now according to Proposition II 12 in Apollonius' {\em Conics}, 
 $$\mbox{rectangle }AE, EH = \mbox{square }ABCD =\frac{1}{4},$$
 and therefore
-$$(x+\frac{1}{2})y = \frac{1}{4}$$
+$$\left(x+\frac{1}{2}\right)y = \frac{1}{4}$$
 and 
 \begin{eqnarray*}
   y & = & \frac{1}{4(x+ \frac{1}{2})}\\
@@ -9799,7 +9807,7 @@ and
 Therefore
 \begin{eqnarray*}
   \mbox{area }CBEH & = & \int\! y\,dx\\
-                   & = & \int\! \left((\frac{1}{2} - x + 2x^2 - 4x^3 + 8x^4 \mbox{ etc.})\,dx\right)\\
+                   & = & \int\! \left(\left(\frac{1}{2} - x + 2x^2 - 4x^3 + 8x^4 \mbox{ etc.}\right)\,dx\right)\\
                    & = & \int\! \frac{1}{2}\,dx - \int\! x\,dx +
                          \int\! 2x^2\,dx - \int\! 4x^3\,dx + \int\!
                          8x^4 \mbox{ etc.}\\
