Work on 2023 manual
Corrected error

--- a/Junior Math Manual 2022.tex
+++ b/Junior Math Manual 2022.tex
@@ -121,7 +121,7 @@ Aristotle's {\em Physics} may be useful in reading Galileo's {\em Two
   an infinite by addition or by division.  And that there is no
   magnitude actually infinite has been said, but there is magnitude
   that is infinite by division; for it is not difficult to refute
-  indivisible lines.  What is left, then is that the infinite is as
+  indivisible lines.  What is left, then, is that the infinite is as
   potentiality.  But it is necessary $|$\marginnote{206a20} not to
   take the being-potentially in the same way as if something were
   potentially a statue, since this will also \emph{be} a statue, and
