Update Junior Math Manual 2023.tex

--- a/Junior Math Manual 2023.tex
+++ b/Junior Math Manual 2023.tex
@@ -309,7 +309,7 @@ also draw from it
 
 But this is not enough; let us go on to some things for which there are as yet
 no rules.  I thought that I should write down for you, most distinguished
-man,\footnote{Leibniz intended to send this manuscript to Jean Gallois, the editor of the Journal des S\c{c}avans.} some ideas that came to my mind about
+man,\footnote{Leibniz intended to send this manuscript to Jean Gallois, the editor of the \emph{Journal des S\c{c}avans}.} some ideas that came to my mind about
 helping the arithmetic of infinites grow.
 
 \label{beghar} When I once told the Illustrious Huygens that I had certain ways of summing a
