Update Junior Math Manual 2023.tex
Errors corrected

--- a/Junior Math Manual 2023.tex
+++ b/Junior Math Manual 2023.tex
@@ -1274,7 +1274,7 @@ turns its {\em concavity} toward the axis.\footnote{See
   curve turns its convexity toward the axis," is to say that it bends
   away from the axis.  If it turns its concavity toward the
   axis, then it bends toward the axis.  Because we use signs in a
-  different way from Leibniz's (see note~7, page~\pageref{cnm7}), the
+  different way from Leibniz (see note~7, page~\pageref{cnm7}), the
   rule is even simpler for us: when $ddv$ is positive, the curve turns
   its convexity downward, that is, it bends upward; while if $ddv$ is
   negative, it turns its concavity downward, that is, it bends
@@ -3718,7 +3718,7 @@ and so $AT =1$.
 Likewise, the triangle $CNM$ is similar to the characteristic triangle at the point $C$, and therefore
 \[\frac{MN}{CN} = \frac{dw}{dx} = 1,\]
 and since $CN = AG =1$, it follows that $MN =1$.
-Therefore $GM = GN + MN = AC + MN = 2$.  But since $TM$ is tangent to $CL$ \ldots
+Therefore $GM = GN + MN = AC + MN = 2$.  But since $TM$ is tangent to $CL$,
 $$GL > GM,$$
 and therefore 
 $$e>2.$$  This is half of what the theorem asserts.
@@ -4415,7 +4415,7 @@ term may be applied to a number or a curve. An algebraic
 number is one that is a solution to an algebraic equation with one
 variable, that is, an equation of the form
 \begin{align*}
-a_{n}x^n+a_{n-1}1x^{n-1}+\cdots+a_1x+a_0=0
+a_{n}x^n+a_{n-1}x^{n-1}+\cdots+a_1x+a_0=0
 \end{align*}
 where $n$ is a natural number and $a_0, a_1, \dotsc$ are integral coefficients.
 For example,
@@ -4626,7 +4626,7 @@ $$\frac{b + ey + 2fx +\mbox{ etc.}}{- c - ex - 2gy +\mbox{ etc.}}$$
 would simply equal $x$, and therefore the equation 
 $$\frac{dy}{dx} =x$$ 
 would be satisfied.
-Note that there is no restriction on $a$ or $c$.  Substituting these
+Note that there is no restriction on $a$ or $c$ (save that $c\neq 0$).  Substituting these
 values back into the general equation (equation~2), gives us a {\em
   definite} equation for $AEB$, that is, it enables us to ``define the
 equation of the line sought":
