Update Junior Math Manual 2023.tex
Revised cosine curve stuff in appendix mostly

--- a/Junior Math Manual 2023.tex
+++ b/Junior Math Manual 2023.tex
@@ -10373,7 +10373,7 @@ contained in $B_1$, then is every other number $a_1$ contained in
 $A_1$ also contained in $B_1$ and is consequently $<a'_1$, i.~e.,
 $a'_1$ is the greatest among all the numbers $a_1$, hence the cut
 $(A_1, A_2)$ is produced by the rational number
-$a=a'_1=b'_2$. Concerning the other cut $(B_1, B_2)$ we know already
+$\alpha=a'_1=b'_2$. Concerning the other cut $(B_1, B_2)$ we know already
 that all numbers $b_1$ in $B_1$ are also contained in $A_1$ and are
 less than the number $a'_1=b'_2$ which is contained in $B_2$; every
 other number $b_2$ contained in $B_2$ must, however, be greater than
@@ -12261,9 +12261,8 @@ algebraic equation) and the quadratrix $AFC$ (which, according to our
 definite degree).
 
 \label{begca}
-(Note that the line $AMC$ is a cosine curve.  For if we let
-$BD = L = 1$, $\angle ABG = \theta$, and $EB = y$, then $ME = \theta$
-and $BE = y = \cos \theta.$)
+(Note that the line $AMC$ is a cosine curve.  For suppose we let
+$BD = L = 1$, $\angle ABG = \theta$, $BE = NM = y$, and $ME = NB = x$. Since $ME,L=$ sector $ABG$, while the formula for sectors with radius $r$ is $\theta r^2/2$, then $ME = \theta/2$ and $BE = \cos \theta$.)
 
 We can use the line $AMC$ both to find a rectilineal area equal to a
 given sector and to find a sector equal to a given rectilineal area,
