--- a/Junior Math Manual 2023.tex
+++ b/Junior Math Manual 2023.tex
@@ -877,7 +877,7 @@ $AD\!:\!AC :: AC\!:\!AB$), and $AE$ is half of $AD$, and so on; therefore
 $$\frac{\frac{1}{2}}{1} = \frac{1}{1 + \frac{1}{2} + \frac{1}{4} + \frac{1}{8} + \mbox{ etc.}}$$
 Inverting both sides, we get
 $$ \frac{2}{1} = 1 + \frac{1}{2} + \frac{1}{4} + \frac{1}{8} + \mbox{ etc.}$$
-Dividing both sides by 2, we get
+Dividing both sides by 2 (we could also subtract by 1), we get
 $$\frac{1}{1} = \frac{1}{2} + \frac{1}{4} + \frac{1}{8} + \frac{1}{16} \mbox{ etc.,}$$
 which is Leibniz's first sum.  To get the second and third sums, we proceed in the same way, but set $AC= \frac{1}{3}$ and $AC = \frac{1}{4}$, respectively.
 
@@ -1347,7 +1347,7 @@ that has not yet been given enough weight): that $dx$, $dy$, $dv$,
 $dw$ and $dz$ themselves can be taken as proportional to the
 differences (or momentary increments or decrements) of $x$, $y$, $v$,
 $w$, and $z$ themselves (respectively).  We can use this to write down
-the differential equation \label{nmdiffeq} for any given equation; we
+the differential equation\label{nmdiffeq} for any given equation; we
 simply substitute for any {\em term} (that is, for any of the parts
 that are joined by addition or subtraction to make up the equation)
 the differential quantity of that term; but for any other quantity
@@ -4601,7 +4601,7 @@ To find the curve $AEB$ that has equation~1, we first write down a ``general or 
 $\frac{dy}{dx}$, as follows.
 \begin{eqnarray*}
 0 & = & d(a + bx + cy + exy + fx^2 + gy^2 + \mbox{ etc.}) \\
-& = & b\,dx + c\,dy + e\,d(xy) + f\,d(x^2) + g\,d(y^2) +\mbox{ etc.}\\
+& = & b\,dx + c\,dy + e\,d(xy) + fd(x^2) + g\,d(y^2) +\mbox{ etc.}\\
 & = & b\,dx + c\,dy + ex\,dy + ey\,dx + 2fx\,dx + 2gy\,dy + \mbox{ etc.}
 \end{eqnarray*}
 (We used the multiplication rule and the power rule on the last step.)
@@ -8408,7 +8408,7 @@ Therefore,
 
 \subsection*{The method of substitution and the chain rule}\label{chainrulestart}
 
-When finding derivatives, we often have to substitute new variables.
+When finding differences, we often have to substitute new variables.
 This looks somewhat different when put into the language of
 derivatives.  For example, if $y=\sin(x^2)$ and we want to find $dy$
 in terms of $x$ and $dx$.  Let $x^2 =v$, then
@@ -11806,7 +11806,7 @@ it!''
       `$\mathscr{P}(S)$'.}
   \end{quote}
   Let $S=\{a,b\}$. Its subsets include $\{a\}, \{b\}, \{a,b\}$. We now
-  admit the null set \label{nullset} $\varnothing$ (see
+  admit the null set\label{nullset} $\varnothing$ (see
   \S\ref{prefnullset} above) and say that $\varnothing$ is a subset of
   any other set. Accordingly
   $\mathscr{P}(S)=\{\varnothing, \{a\}, \{b\}, \{a,b\}\}$.
