Update Junior Math Manual 2023.tex
Added footnote with simpler proof for note to Leibniz's "Barrow theorem."

--- a/Junior Math Manual 2023.tex
+++ b/Junior Math Manual 2023.tex
@@ -4772,13 +4772,13 @@ $$\angle B_1BG + \angle GBD = \angle CBD + \angle GBD,$$
 and therefore (subtracting  $\angle GBD$ from both sides of this equation)
 $$\angle B_1BG=  \angle CBD,$$
 so that the triangles $GBB_1$ and $CBD$ share two equal angles, and
-are therefore similar.  It follows from the similarity of these two
+are therefore similar. It follows from the similarity of these two
 triangles that
 $$B_1G\!:\! BG :: CD \!:\! BC,$$
 that is,
 $$dx\!:\!dy :: p\!:\!x,$$
 and therefore 
-$$x\,dx = p\,dy.$$
+$$x\,dx = p\,dy.\footnote{Perhaps a simpler way to see this is to extend line $BE$ in Figure~\ref{barrow1A} to the axis. You have at once two similar triangles ($ECB$ and $BGB_1$), along with a larger right-angled triangle $EBD$ that you can imagine inscribed in a semi-circle (with diameter $ED$). We know from Euclid VI.13, in that case, that $EC\!:\!BC::BC\!:\!CD$. And from the similar triangles $ECB$ and $BGB_1$, we know that $EC\!:\!BC::BG\!:\!B_1G$. So $BC\!:\!CD::BG\!:\!B_1G$. Multiplying extremes and means in this last proportion, we get $CD\cdot BG=BC\cdot B_1G$. That is, $pdy=xdx$.}$$ 
 
 \subsection*{Note 14}
 \label{crg14}
