Update Junior Math Manual 2023.tex
Revision to first fundamental theorem proof

--- a/Junior Math Manual 2023.tex
+++ b/Junior Math Manual 2023.tex
@@ -5207,7 +5207,7 @@ figures, and we therefore name them the {\em first} and {\em second
 $$\int\!dv = v.$$
 
 \noindent {\bf Demonstration:} 
-Let the line $AB$ represent the quantity $v$. (See Figure~\ref{ffundfig}.)
+Let the line $XV$ represent the quantity $v$. (See Figure~\ref{ffundfig}.)
 \begin{figure}[htp]
 \begin{center}
 \includegraphics[width=.75\textwidth]{fig/Figure37}
@@ -5215,13 +5215,13 @@ Let the line $AB$ represent the quantity $v$. (See Figure~\ref{ffundfig}.)
 \label{ffundfig}
 \vspace{-10pt}
 \end{center}
-\end{figure} Take infinitely many infinitely close points $C_1$,
-$C_2$, etc.\ on the line, so that $AC_1 = v_1$, $AC_2 =v_2$,
-$AC_3 =v_3$, etc.  Therefore $AC_1 =dv_1$, $C_1C_2 = dv_2$, etc. Then
+\end{figure} 
+In the finite case, the whole ordinate $XV$ can be ``built up'' from the differences of successive ordinates: $B_1V_1–A$, $B_2V_2 - B_1V_1$, etc. If we take infinitely many infinitely close points $B_1$, $B_2$, etc., on the line $AX$, then the differences in ordinate length can be expressed as $dv$, with $B_1V_1 – A$ as $dv_1$, $B_2V_2 – B_1V_1$ as $dv_2$, etc.
+Then
 \begin{eqnarray*}
   \int\!dv & = & dv_1 + dv_2 + \ldots\\
-           & = & AC_1 + C_1C_2 + C_2C_3 +\ldots \\
-           & = & AB\\
+           & = & (B_1V_1-A) + (B_2V_2-B_1V_1) +\ldots \\
+           & = & XV\\
            & = & v. \mbox{\hspace{10ex}  \textsc{q.e.d.}}
 \end{eqnarray*}
 
